tests/ui/parser/no-const-fn-in-extern-block.stderr
error: functions in `extern` blocks cannot have qualifiers
  --> $DIR/no-const-fn-in-extern-block.rs:2:5
   |
LL | extern "C" {
   | ---------- in this `extern` block
LL |     const fn foo();
   |     ^^^^^
   |
help: remove this qualifier
   |
LL -     const fn foo();
LL +      fn foo();
   |

error: functions in `extern` blocks cannot have qualifiers
  --> $DIR/no-const-fn-in-extern-block.rs:4:5
   |
LL | extern "C" {
   | ---------- in this `extern` block
...
LL |     const unsafe fn bar();
   |     ^^^^^
   |
help: remove this qualifier
   |
LL -     const unsafe fn bar();
LL +      unsafe fn bar();
   |

error: items in unadorned `extern` blocks cannot have safety qualifiers
  --> $DIR/no-const-fn-in-extern-block.rs:4:5
   |
LL |     const unsafe fn bar();
   |     ^^^^^^^^^^^^^^^^^^^^^^
   |
help: add unsafe to this `extern` block
   |
LL | unsafe extern "C" {
   | ++++++

error: aborting due to 3 previous errors

